src/components/Navbar/navbar.css
.navbar-container{
    position: fixed !important;
    display: flex;
    justify-content: space-between;
    z-index: 5;
    padding-right: 50px;
    width: 100%;
}
.navbar-btn-home{
    padding-right: 10px;
}
/* 
.navbar {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    padding: 0px 16px;
    height: 36px;
    color: rgb(244,232,208);
    background-color: rgb(230, 46, 32);
    z-index: 4 !important;
}
.navbar-links-left {
    display: flex;
    gap: 12px;
}


.Links-navbar, .Links-navbar-home{
    display: flex;
    align-items: center;
    height: 36px;
    color: white;
}
.Links-navbar-home {
    font-size: 1.05rem;
    font-weight: 800;
}

.div-pel-links{
    position: relative;
}
.pelu-links-navbar{
    transition: 0.5s;
    position: absolute;
    transform: translateX(-300%);
}
.pelu-links-navbar-show {
    transition: 0.2s;
    background-color: red;
    position: absolute;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    padding-left: 4px;
    width: 250px;
    transform: translateY(-13%);
    text-align: left;
} */

nav{
    height: 20px;
}
.navbar {
    background-color: #8f4242;
    color: #fff;
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
    transition: top 0.3s; /* Agregamos una transición para suavizar el efecto */
  }
  
  .navbar a {
    color: #fff;
    text-decoration: none;
    margin-right: 20px;
  }
  
  .navbar-toggle {
    cursor: pointer;
    display: none;
  }
  
  
  /* Media query para mostrar u ocultar elementos según el tamaño de la pantalla */
  @media (max-width: 1200px) {
    
  
    .navbar-left {
        > a{
            display: none;
            align-items: center;
        }
    }
    .navbar-right {
      display: none;
      align-items: center;
    }
  
    .navbar-toggle {
      display: block;
    }
  
    .mobile-menu {
      display: flex;
      flex-direction: column;
      position: absolute;
      top: 38px;
      padding-top: 20px;
      right: 0;
      background-color: #8f4242;
      width: 100%;
      height: 100dvh;
      transition: transform 0.35s ease-in-out;
      transform: translateX(-120%);
      > a {
        display: flex;
        padding: 5px 10px;
        width: 100%;
        height: 40px;
      }
    }
    .mobile-menu.active {
        display: flex;
        > a{
            color: white;
          }
        flex-direction: column;
        transform: translateX(0%); /* Muestra el menú moviéndolo hacia la izquierda */
      }
  
    .navbar.active .mobile-menu.active a {
        display: flex;
        padding: 5px 10px;
        width: 100%;
        height: 40px;
        transform: translateX(0%);
    }
  }

